# sales_forecast_app

./: .gitignore  Dockerfile.frontend  Dockerfile.python  README.md  docker-compose.yml  pyproject.toml
api/: main.py  models.py  predict.py
chat_agent/: agent.py
frontend/: index.html  package.json  vite.config.js
frontend/src/: App.css  App.jsx
model/: model_info.pkl  options_info.pkl  sales_model.pkl  train_model.py
