[tool.poetry]
name = "sales-forecast"
version = "0.1.0"
description = ""
authors = ["Lewis Fletcher <lew.fletcher3@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.14"
pandas = "^3.0.1"
scikit-learn = "^1.8.0"
fastapi = {extras = ["standard"], version = "^0.135.1"}
langchain = "^1.2.13"
langchain-anthropic = "^1.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
